# research

./: .pre-commit-config.yaml  AGENTS.md  README.md  changes.diff  notes.md  pyproject.toml
.devcontainer/: devcontainer.json  post-create.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  claude-code-review.yml
aidanbench/: .gitignore  README.md  notes.md
aidanbench/run/: models.py  results.json  run_benchmark.py
docker/: .dockerignore  Dockerfile  NETWORK_MONITORING.md  README.md  entrypoint.sh  init-firewall.sh  run-isolated.sh  run-monitored.sh  run.sh  web-ui.html
docker/monitoring/: .gitignore  IPTABLES_ENFORCEMENT.md  NETWORK_MONITORING.md  default-network-rules.json  manage-firewall.sh  network-monitor.py  network-rules-example.json  pyproject.toml  test_network_monitor.py  test_web_ui.py  web-ui.html  web-ui.py
fastmcp-generate-cli-minimal/: README.md  SKILL.md  example_server.py  generate_cli.py  notes.md  test_cli.py
gemini-cli-startup/: README.md  benchmark.py  notes.md  profile_core.mjs  profile_imports.mjs  profile_otel.mjs  profile_startup.mjs
ngrok-python-agent-example/: .env.example  README.md  agent.py  agents.py  iteration-16.diff  iteration-17.diff  notes.md  pyproject.toml  pyrightconfig.json  requirements.txt  test_agents.py
rodney-origami/: README.md  investigation.md  notes.md
scripts/: run_ci_checks.sh
slack-llm-coding-agent/: .env.example  README.md  notes.md  package-lock.json  package.json
slack-llm-coding-agent/src/: agent.ts  config.ts  index.ts  tools.ts
spotify-playlist-generator/: IMPROVEMENTS.md  README.md  SPOTIFY_SETUP.md  analyze_seeds.py  changes.diff  data.py  examples.py  manual_spotify_check.py  notes.md  playlist.py  pyproject.toml  real_spotify_generator.py  spotify_verification.py  test_optimized_seeds.py  test_results.md  test_ten_seeds.py
spotify-playlist-generator/tests/: test_playlist_generator.py
spotify_playlist_generator/: __init__.py  data.py  examples.py  playlist.py
tests/: __init__.py  math_utils.py  test_math_utils.py
