[project]
name = "ngrok-python-agent-example"
version = "0.1.0"
description = "Simple agent scaffolding with Flask and ngrok"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask>=3.0.0",
    "pyngrok>=7.0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent.py", "agents.py"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
