[project]
name = "ngrok-python-agent-example"
version = "0.1.0"
description = "Simple agent scaffolding with Flask and ngrok"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "flask>=3.0.0",
    "absl-py>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "pyright>=1.1.354",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["agent.py", "agents.py"]

# Tool configurations are inherited from root pyproject.toml
# Only project-specific overrides are defined here

[tool.pyright]
include = ["agent.py", "agents.py", "test_agents.py"]
