[project]
name = "spotify-playlist-generator"
version = "0.1.0"
description = "Spotify playlist generator investigation and tooling config"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
  "pyright",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
  "pyright",
]
