[project]
name = "docker-network-monitoring"
version = "0.1.0"
description = "Network monitoring and firewall for Docker containers"
requires-python = ">=3.12"
dependencies = [
    "mitmproxy>=10.1.0",
    "rich>=13.7.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = [".", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
